flycheck-stan/examples/example_failure_misspelled_block.stanc3out.txt

Syntax error in 'examples/example_failure_misspelled_block.stan', line 3, column 0 to line 7, column 1, parsing error:
   -------------------------------------------------
     5:    vector[J] y;
     6:    vector<lower=0>[J] sigma;
     7:  }
          ^
     8:  pparameters {
     9:    real mu;
   -------------------------------------------------

Expected "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


